projects/sbioa/sbioa-businesslogic/k8s-config/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: logic
  name: logic
  namespace: sbioa-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logic
  template:
    metadata:
      labels:
        app: logic
    spec:
      containers:
        - image: registry.coherent.in/sbioa-businesslogic-service:190
          resources:
            requests:
              cpu: "100m"
              memory: "1500Mi"
            limits:
              cpu: "2000m"
              memory: "4096Mi"
          imagePullPolicy: Always
          name: logic
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8012
            failureThreshold: 30
            periodSeconds: 10
      imagePullSecrets:
        - name: registry-regcred
